Fix cursor behavior on Safari
x,y must be within the image

--- a/client/main.styl
+++ b/client/main.styl
@@ -8,5 +8,5 @@ body
   width: 100%
   height: 100%
 
-  cursor: url(/favicon32.png) 0 32, crosshair
+  cursor: url(/favicon32.png) 0 31, crosshair
   touch-action: none
